--- a/1.html
+++ b/1.html
@@ -128,7 +128,7 @@
         </div>
 
         <div class="form-row">
-          <button type="button" onclick="generatePDF()">Export to PDF</button>
+          <button type="button" onclick="generatePDF()">Submit</button>
         </div>
       </form>
     </form>
