--- a/1.html
+++ b/1.html
@@ -184,7 +184,8 @@
           companyName: companyName,
           companyEmail: companyEmail,
           icNumber: icNumber,
-          date: date
+          date: date,
+          signatureDataUrl: signaturePad.toDataURL()
         };
 
         var xhttp = new XMLHttpRequest();
