--- a/1.html
+++ b/1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Employees Notebook/Asset Assignment Agreement</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     /* Add CSS styling here */
     #signatureContainer {
