--- a/1.html
+++ b/1.html
@@ -15,7 +15,7 @@
 
     body {
       background-image: url('bg1.jpg');
-      background-repeat: no-repeat;
+      background-repeat: repeat;
       background-size: 2000px 1000px;
       margin: 0;
       padding: 0;
