--- a/1.html
+++ b/1.html
@@ -13,6 +13,10 @@
       margin-bottom: 20px;
     }
 
+    #signatureContainer canvas {
+      margin-bottom: 10px;
+    }
+
     body {
       background-image: url('bg1.jpg');
       background-repeat: repeat;
