--- a/1.html
+++ b/1.html
@@ -324,6 +324,13 @@
           title: 'Please enter the company email correctly.'
         });
       }
+      else if(signaturePad.isEmpty())
+      {
+        Swal.fire({
+          icon: 'error',
+          title: 'Please sign up for the form.'
+        });
+      }
       else {
         return true;
       }
@@ -387,7 +394,7 @@
           if (respond.result === "error") {
             Swal.fire({
               icon: 'error',
-              title: 'Invalid Email Address',
+              title: 'Input Error',
               text: respond.message
             });
           }
